# portfolio

./: .gitignore  Cargo.toml
christopher/: Cargo.toml
christopher/examples/logic_gate_neuron/: lib.rs  main.rs
christopher/src/: lib.rs
christopher/src/evolutionary_algorithms/: mod.rs
christopher/src/evolutionary_algorithms/adversarial/: environment.rs  mod.rs  population.rs
christopher/src/evolutionary_algorithms/fitness_based/: individual.rs  mod.rs
christopher/src/neural_networks/: mod.rs  neurons.rs
christopher/tests/: neuron_test.rs
cli_commands/: Cargo.toml
my_rusttools/: Cargo.toml
my_rusttools/examples/guessing_game/: main.rs
my_rusttools/examples/primes_examples/: main.rs
my_rusttools/src/: gcacher.rs  input.rs  lib.rs
my_rusttools/src/factories/: iter_factories.rs  mod.rs
my_rusttools/src/input/: basic_input.rs  mod.rs  to_bool.rs
my_rusttools/src/input/to_numerical/: error.rs  float.rs  int.rs  mod.rs
my_rusttools/src/traits/: humanize_bool.rs  mod.rs  summarise_collection.rs
my_rusttools/tests/: factory_tests.rs  gcacher_tests.rs  input_handling.rs  misc_tests.rs  summarisation_tests.rs  to_bool_tests.rs
purple_blox/: Cargo.toml
purple_blox/site/index/: index.html
purple_blox/site/not_found/: not_found.html
purple_blox/src/: lib.rs  main.rs  pool.rs
reitertools/: Cargo.toml
reitertools/src/: lib.rs  structs.rs  traits.rs
