[package]
name = "my_rusttools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
reitertools = {path = "../reitertools"}
getset = "0.1.2"

[dev-dependencies]
rand = "0.8.4"